<resources>
    <string name="app_name">LoginRegister</string>

    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Register">Register</string>
    <string name="email">email</string>
    <string name="lang">lang</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="name">name</string>
    <string name="last_name">Last Name</string>
    <string name="change_lang">Cambiar idioma</string>
    <string name="acc_insignias">Acceder a las insignias</string>
    <string name="acc_tienda">Acceder a la tienda</string>
    <string name="acc_perfil">Acceder a tu perfil</string>
    <string name="choose_language">Escoge un lenguaje</string>

    <string name="jumbotron_denuncia">Denuncia</string>
    <string name="fecha_denuncia">Introduzca la fecha</string>
    <string name="titulo_denuncia">Titulo</string>
    <string name="mensaje_denuncia">Mensaje</string>
    <string name="enviar_denuncia">Enviar</string>

</resources>