<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".LoginActivity">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jumbotron_denuncia"
            android:textSize="30sp">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha_denuncia"
            android:minHeight="48dp">
    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tituloDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo_denuncia"
            android:minHeight="48dp">
    </com.google.android.material.textfield.TextInputEditText>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje_denuncia"
            android:minHeight="48dp">
    </com.google.android.material.textfield.TextInputEditText>

    <Button
            android:id="@+id/btn_enviarDen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar_denuncia" />

</LinearLayout>